linked two screens

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,4 +100,12 @@
         tools:layout_editor_absoluteX="272dp"
         tools:layout_editor_absoluteY="173dp" />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="66dp"
+        tools:layout_editor_absoluteY="288dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
