--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -18,58 +18,46 @@
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/winner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="TERMINUS" />
 
-    <EditText
-        android:id="@+id/editTextTextPersonName2"
-        android:layout_width="0dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="74dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="input letter"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button3"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/word"
         android:layout_width="250dp"
         android:layout_height="43dp"
-        android:layout_marginTop="52dp"
-        android:text="Word Being Spelled"
+        android:layout_marginTop="304dp"
+        app:layout_constraintBottom_toTopOf="@+id/challengeButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.173"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/app_name"
+        tools:text="Word" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/winner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="66dp"
         android:text="Outcome"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/challengeButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/app_name" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/challengeButton"
         android:layout_width="124dp"
         android:layout_height="48dp"
+        android:layout_marginStart="28dp"
         android:text="Challenge"
-        tools:layout_editor_absoluteX="134dp"
-        tools:layout_editor_absoluteY="173dp" />
+        app:layout_constraintBottom_toTopOf="@+id/letter"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/submitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="33dp"
@@ -77,35 +65,39 @@
         android:text="Submit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName2"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/challengeButton"
         app:layout_constraintVertical_bias="1.0" />
 
-    <Button
-        android:id="@+id/button5"
+    <TextView
+        android:id="@+id/playerTwo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#4CAF50"
-        android:text="Trisha"
-        tools:layout_editor_absoluteX="29dp"
-        tools:layout_editor_absoluteY="173dp" />
+        android:layout_marginEnd="52dp"
+        android:text="@string/playerTwo"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteY="195dp" />
 
-    <Button
-        android:id="@+id/button6"
+    <TextView
+        android:id="@+id/playerOne"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#D81F1F"
-        android:text="Xain"
-        app:iconTint="#FFFFFF"
-        tools:layout_editor_absoluteX="272dp"
-        tools:layout_editor_absoluteY="173dp" />
+        android:layout_marginStart="28dp"
+        android:text="@string/playerOne"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="202dp" />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="66dp"
-        tools:layout_editor_absoluteY="288dp" />
+    <EditText
+        android:id="@+id/letter"
+        android:layout_width="248dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="22dp"
+        android:layout_marginBottom="73dp"
+        android:text="@string/input_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:maxLength="1"
+        android:inputType="text"
+        android:digits="abcdefghijklmnopqrstuvwxyz"
+        android:hint="@string/enter_guess"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
