--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,99 +6,84 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/app_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="19dp"
-        android:ems="10"
-        android:fontFamily="sans-serif-condensed-medium"
-        android:inputType="textPersonName"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/outcome"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="TERMINUS" />
-
     <TextView
         android:id="@+id/word"
         android:layout_width="250dp"
         android:layout_height="43dp"
-        android:layout_marginBottom="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/challengeButton"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.236"
+        app:layout_constraintHorizontal_bias="0.242"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/outcome"
         tools:text="Word" />
 
     <TextView
         android:id="@+id/outcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:text="Outcome"
-        app:layout_constraintBottom_toTopOf="@+id/word"
+        android:layout_marginTop="24dp"
+        android:text="@string/outcome"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.107"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/playerOne" />
 
     <Button
         android:id="@+id/challengeButton"
         android:layout_width="124dp"
         android:layout_height="48dp"
         android:layout_marginStart="36dp"
-        android:layout_marginBottom="24dp"
-        android:text="Challenge"
-        app:layout_constraintBottom_toTopOf="@+id/letter"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginTop="24dp"
+        android:text="@string/challenge"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/letter" />
 
     <Button
         android:id="@+id/submitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="74dp"
-        android:text="Submit"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/submit"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/letter"
-        app:layout_constraintTop_toBottomOf="@+id/challengeButton"
-        app:layout_constraintVertical_bias="0.059" />
+        app:layout_constraintTop_toTopOf="@+id/letter" />
 
     <TextView
         android:id="@+id/playerTwo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="64dp"
+        android:layout_marginBottom="32dp"
         android:text="@string/playerTwo"
+        app:layout_constraintBottom_toTopOf="@+id/outcome"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="176dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/playerOne"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="32dp"
         android:text="@string/playerOne"
+        app:layout_constraintBottom_toTopOf="@+id/outcome"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="176dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/letter"
         android:layout_width="248dp"
         android:layout_height="48dp"
         android:layout_marginStart="36dp"
-        android:layout_marginBottom="280dp"
+        android:layout_marginTop="24dp"
         android:digits="abcdefghijklmnopqrstuvwxyz"
         android:hint="@string/enter_guess"
+        android:importantForAutofill="no"
         android:inputType="text"
         android:maxLength="1"
         android:text="@string/input_text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/word" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
