--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,9 +53,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="64dp"
-        android:layout_marginBottom="32dp"
         android:text="@string/playerTwo"
-        app:layout_constraintBottom_toTopOf="@+id/outcome"
+        app:layout_constraintBottom_toBottomOf="@+id/playerOne"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
