--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,25 +8,30 @@
 
     <TextView
         android:id="@+id/word"
-        android:layout_width="250dp"
-        android:layout_height="43dp"
+        android:layout_width="341dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="36dp"
         android:layout_marginTop="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.242"
+        android:textAlignment="center"
+        android:textColor="#009688"
+        android:textSize="34sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/outcome"
         tools:text="Word" />
 
     <TextView
         android:id="@+id/outcome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="341dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="36dp"
         android:layout_marginTop="24dp"
-        android:text="@string/outcome"
+        android:textAlignment="center"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.107"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/playerOne" />
+        app:layout_constraintTop_toBottomOf="@+id/playerOne"
+        tools:text="Outcome" />
 
     <Button
         android:id="@+id/challengeButton"
