--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/game_background" />
+
     <TextView
         android:id="@+id/word"
         android:layout_width="341dp"
@@ -59,6 +70,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="64dp"
         android:text="@string/playerTwo"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/playerOne"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -71,6 +83,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginBottom="32dp"
         android:text="@string/playerOne"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/outcome"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
